xfsprogs-2.6.4 (17 February 2003)
	- Fix a few more libxfs/repair leaks.
	- Fix up some libhandle routines, add the open_by_fshandle
	  routine required by recent versions of xfsdump.

xfsprogs-2.6.3 (19 January 2003)
	- Merge Steve Langasek's work on the Debian installer
	  support for xfsprogs.
	- Add knowledge to xfs_db about the security namespace in
	  its extended attributes commands.
	- Sync up user/kernel source in libxfs and headers.
	- Fix a couple of compilation warnings.
	- Workaround for some versions of autoconf mishandling the
	  AC_CHECK_SIZEOF macro.
	- Fix a memory leak in libxfs, most noticable in xfs_repair.

xfsprogs-2.6.2 (17 December 2003)
	- Fix dev_t sizing issues in user tools - glibc uses a 64
	  bit number and XFS has a 32 device bit number, confusion
	  reigns.  Not much manipulates device numbers in the XFS
	  user tools though, hence hasn't really been seen before.
	  Thanks to Christoph for the patch.

xfsprogs-2.6.1 (27 November 2003)
	- Human-friendly xfs_io read/write bsize specifications.
	- Dump throughput and IOPs values after xfs_io reads/writes.
	- Sync up user/kernel source in libxfs, libxlog and headers.

xfsprogs-2.6.0 (28 October 2003)
	- Change to mkfs strategy for allocation group count and size
	  default.  Scales significantly better for large filesystems.

xfsprogs-2.5.11 (10 October 2003)
	- Incorporate Jan Derfinaks change to the Linux block ioctls
	  used in libxfs, allowing this code to compile cleanly with
	  include files from Linux 2.6.0-test5 onward.

xfsprogs-2.5.10 (30 September 2003)
	- Fix up xfs_logprint to handle version 2 logs for its 
	  operation output (previously core dumped on it).

xfsprogs-2.5.9 (19 September 2003)
	- Sync up user/kernel source in libxfs, libxlog and headers.
	- Add new inode flags into xfs_db too.

xfsprogs-2.5.8 (12 September 2003)
	- Add missing options to xfs_db frag command one-line summary.
	- Add xfs_io commands for setting and clearing new inode flags